sfdc-deploy/force-app/main/default/objects/Safe_Setup__c/Safe_Setup__c.object-meta.xml
<CustomObject>
    <description>Onboarding-time safe configuration captured during Step 2 of NST Retailer Onboarding. Live safe data is sourced from NAMSYS — this is setup-only.</description>
    <label>Safe Setup</label>
    <nameField>
        <displayFormat>SS-{0000}</displayFormat>
        <label>Safe Setup ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Safe Setups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>