sfdc-deploy/force-app/main/default/objects/Safe_Setup__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Parent account for this safe setup.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Safe Setups</relationshipLabel>
    <relationshipName>Safe_Setups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>