sfdc-deploy/force-app/main/default/objects/Safe_Setup__c/fields/Backup_Key_Location__c.field-meta.xml
<CustomField>
    <fullName>Backup_Key_Location__c</fullName>
    <description>Where the backup key is stored. Free text, manager-described.</description>
    <label>Backup Key Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>