sfdc-deploy/force-app/main/default/objects/Safe_Setup__c/fields/Combo_Last4__c.field-meta.xml
<CustomField>
    <fullName>Combo_Last4__c</fullName>
    <description>Last 4 of combination for verification only. NEVER store full combo. Recommend Shield Platform Encryption if license available.</description>
    <label>Combo Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>