sfdc-deploy/force-app/main/default/objects/Safe_Setup__c/fields/Key_Holders_Count__c.field-meta.xml
<CustomField>
    <fullName>Key_Holders_Count__c</fullName>
    <description>Number of staff with safe access.</description>
    <label>Key Holders Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>