sfdc-deploy/force-app/main/default/objects/Safe_Setup__c/fields/Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Photo_URL__c</fullName>
    <description>Supabase storage URL for the safe photo uploaded during Step 2.</description>
    <label>Photo URL</label>
    <type>Url</type>
</CustomField>