sfdc-deploy/force-app/main/default/objects/Safe_Setup__c/fields/Safe_Make__c.field-meta.xml
<CustomField>
    <fullName>Safe_Make__c</fullName>
    <description>Manufacturer of the safe.</description>
    <label>Safe Make</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value><fullName>American Security</fullName><default>false</default><label>American Security</label></value>
                <value><fullName>Tidel</fullName><default>false</default><label>Tidel</label></value>
                <value><fullName>FireKing</fullName><default>false</default><label>FireKing</label></value>
                <value><fullName>SentrySafe</fullName><default>false</default><label>SentrySafe</label></value>
                <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>