sfdc-deploy/force-app/main/default/objects/Safe_Setup__c/fields/Safe_Model__c.field-meta.xml
<CustomField>
    <fullName>Safe_Model__c</fullName>
    <description>Model number/name of the safe.</description>
    <label>Safe Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>