sfdc-deploy/force-app/main/default/objects/Safe_Setup__c/fields/Safe_Serial__c.field-meta.xml
<CustomField>
    <fullName>Safe_Serial__c</fullName>
    <description>Serial number of the safe.</description>
    <externalId>true</externalId>
    <label>Safe Serial</label>
    <length>80</length>
    <type>Text</type>
</CustomField>