sfdc-deploy/force-app/main/default/objects/Safe_Setup__c/fields/Safe_Type__c.field-meta.xml
<CustomField>
    <fullName>Safe_Type__c</fullName>
    <description>Operational class of the safe.</description>
    <label>Safe Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Smart Safe</fullName><default>false</default><label>Smart Safe</label></value>
                <value><fullName>Drop Safe</fullName><default>false</default><label>Drop Safe</label></value>
                <value><fullName>Combo</fullName><default>false</default><label>Combo</label></value>
                <value><fullName>Time-delay</fullName><default>false</default><label>Time-delay</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>