sfdc-deploy/force-app/main/default/objects/Safe_Setup__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true by driver on first pickup after physically verifying the safe matches the setup record.</description>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>